--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <body>
 
 <h1>My ECS Github Web Page</h1>
-<h2>Heading 2</h2>
+<h2>Unit 3: HTML</h2>
 <p>Welcome!</p>
 
+  <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/" > </a>
 </body>
 </html>
