--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <body>
 
 <h1>My ECS Github Web Page</h1>
-<h2>Unit 3:HTML</h2>
+<h2>Unit 3: HTML</h2>
 <p>Welcome!</p>
 
-  <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/" > </a>
+<a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
+
 </body>
 </html>
