--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <title>My ECS Github Page</title>
+<h1<title>My ECS Github Page</titlestyle="background-color:SkyBlue;">My ECS Github 
+page</h1>
 <body>
 
 <h1>My ECS Github Web Page</h1>
