--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <html>
 <title>My ECS Github Page</title>
 <body>
-
-<h1>My ECS Github Web Page</h1>
-  <h1<title>My ECS Github Page</titlestyle="background-color:SkyBlue;">My ECS Github 
+<h1 style="background-color:SkyBlue;">My ECS Github 
 page</h1>
 <h2>Unit 3: HTML</h2>
 <p>Welcome!</p>
