--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html>
-<title>My ECS Github Page</title>
 <body>
-<h1 style="background-color:SkyBlue;">My ECS Github 
-page</h1>
-<h2>Unit 3: HTML</h2>
-<p>Welcome!</p>
-
-<a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
-
+  <title>Fall 2017</title>
+  <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
+  <h2 title="About Unit 3"> Unit 3: HTML</h2>
+  <p>Welcome!</p>
+  <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
 </body>
+
+  
 </html>
