--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
   <title>Fall 2017</title>
   <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
   <h2 title="About Unit 3"> Unit 3: HTML</h2>
+  <hr>
   <p>Welcome!</p>
+  <p>I hope you enjoy my page</p>
+  
   <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
 </body>
+<pre>
+
+To those whom I've fought with
+
+and to those I don't know your name
+
+We fought by one another.
+
+You did not die in vain.
+
+</pre>
 
   
 </html>
