--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
   <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
   <h2 title="About Unit 3"> Unit 3: HTML</h2>
   <hr>
-  <p>Welcome!</p>
-  <p>I hope you enjoy my page</p>
+  <p style="font-family:courier;">Welcome!</p>
+  <p style="color: lavender" "text-align:center" >I hope you enjoy my page. </p>
+  <p style="text-align:center">This is a paragraph.</p>
   
   <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
 </body>
