--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-<body>
-  <title>Fall 2017</title>
+<body style="text-align:center">
+  
   <h1 style="background-color:SkyBlue;">My ECS Github Page</h1>
   <h2 title="About Unit 3"> Unit 3: HTML</h2>
   <hr>
   <p style="font-family:courier;">Welcome!</p>
-  <p style="color: lavender" "text-align:center" >I hope you enjoy my page. </p>
-  <p style="text-align:center">This is a paragraph.</p>
-  
+  <p style="color: red">I hope you enjoy my page. </p>
+  <p style="font-size:40px">Computer Science. </p>
+  <p>A HTML document is made up of a number of blocks called <strong>elements</strong> </p>
+  <p>An Element is defined by tags where there is a <em>start</em> and <em>end</em> tag.</p>
   <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
 </body>
 <pre>
