--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <p style="font-size:40px">Computer Science. </p>
   <p>A HTML document is made up of a number of blocks called <strong>elements</strong> </p>
   <p>An Element is defined by tags where there is a <em>start</em> and <em>end</em> tag.</p>
+  <p>HTML, CSS, and Javascript form the three most <mark>vital</mark> components of the World Wide Web
   <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
 </body>
 <pre>
