--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:lavender;">
+<body style="background-color:lightpink;">
 
-<h1 style="color:white;">This is a heading</h1>
-<p style="color:babyblue;">This is a paragraph.</p>
+<h1 style="color:white;">ECS FALL 2017</h1>
+<p style="color:skyblue;">This is a paragraph.</p>
 
 </body>
 </html>
