--- a/exercises/index.html
+++ b/exercises/index.html
@@ -4,7 +4,10 @@
 <body style="background-color:lightpink;">
 
 <h1 style="color:white;">ECS FALL 2017</h1>
-<p style="color:skyblue;">This is a paragraph.</p>
-
+  <p style="color:white;">EXERCISES.</p>
+  <a href="https://conniecchen.github.io">Tester link</a>
+  
 </body>
+  
+
 </html>
