--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,7 +5,7 @@
 
 <h1 style="color:white;">ECS FALL 2017</h1>
   <p style="color:white;">EXERCISES.</p>
-  <a href="https://conniecchen.github.io">Tester link</a>
+  <a href="links.html">Link Exercises</a>
   
 </body>
   
