--- a/exercises/index.html
+++ b/exercises/index.html
@@ -6,7 +6,7 @@
 <h1 style="color:white;">ECS FALL 2017</h1>
   <p style="color:white;">EXERCISES.</p>
   <a href="links.html">Link Exercises</a>
-<img src="https://goo.gl/jodXn2">
+<img src="/images/img.jpg" alt="Coffee" width="50" height="60">
   
 </body>
   
