--- a/exercises/links.html
+++ b/exercises/links.html
@@ -5,6 +5,10 @@
 
 <h1>LINKS</h1>
 <p>lol</p>
+  
+<a href="index.html">
+  <img src=" /images/home.png" alt="Exercises Home"
+       style="width:42px:height:42px:border:0;"
 
 </body>
 </html>
