--- a/exercises/links.html
+++ b/exercises/links.html
@@ -7,8 +7,8 @@
 <p>lol</p>
   
 <a href="index.html">
-  <img src=" /images/home.png" alt="Exercises Home"
-       style="width:42px:height:42px:border:0;"
+  <img src="https://static.pexels.com/photos/356378/pexels-photo-356378.jpeg" alt="Exercises Home"
+       style="width:42px:height:42px:border:0;">
 
 </body>
 </html>
