--- a/exercises/links.html
+++ b/exercises/links.html
@@ -8,7 +8,8 @@
   
 <a href="index.html">
   <img src="https://static.pexels.com/photos/356378/pexels-photo-356378.jpeg" alt="Exercises Home"
-       style="width:12px:height:12px:border:0;">
+       style="width:12px:height:12px:border:0;" width="12px" height="12px">
+      
 </a>
 </body>
 </html>
