--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <h1>London</h1>
 <hr>
 <p>London is the capital city of England. It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
@@ -14,3 +17,5 @@
 <h3>About</h3>
 
 <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
+</body>
+</html>
