--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -1,3 +1,6 @@
+<!DOCTYPE html>
+<html>
+<body>
 <p>Hello World!</p>
 <h1>This is a Heading
 
@@ -21,3 +24,5 @@ Oh, bring back my Bonnie to me.
    Oh, bring back my Bonnie to me.
 
 </p>
+</body>
+</html>
