--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:lightpink;">
+<body style="background-color:lightlavender;">
 
 <h1 style="color:white;">ECS FALL 2017</h1>
-  <p style="color:white;">EXERCISES.</p>
-  <a href="links.html">Link Exercises</a>
+<h2 style="color:white;">EXERCISES.</h2>
+  <a href="attributes.html">Attributes</a>
 <img src="/images/img.jpg" alt="Coffee" width="50" height="60">
   
 </body>
