--- a/exercises/paragraphs.html
+++ b/exercises/paragraphs.html
@@ -8,12 +8,13 @@
 <p>This is a paragraph.
 <p>This is a paragraph.
 <p>
-My Bonnie lies over the ocean.
-My Bonnie lies over the sea.
-My Bonnie lies over the ocean.
+My Bonnie lies over the ocean.<br>
+My Bonnie lies over the sea.<br>
+My Bonnie lies over the ocean.<br>
 Oh, bring back my Bonnie to me.
 </p>
-<p>
+
+<pre>
 
    My Bonnie lies over the ocean.
 
@@ -22,7 +23,7 @@ Oh, bring back my Bonnie to me.
    My Bonnie lies over the ocean.
 
    Oh, bring back my Bonnie to me.
-
-</p>
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
+</pre>
 </body>
 </html>
