--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:lightlavender;">
+<body style="background-color:lavender;">
 
 <h1 style="color:white;">ECS FALL 2017</h1>
 <h2 style="color:white;">EXERCISES.</h2>
