--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
-<body style="text-align:center">
-  <style="background-color:yellow">
-    <style="font-family:helvetica neue">
+<body style="text-align:center ; background-color:yellow ; font-family:helvetica neue">
+
 
 <h1 style="font-size:50px">HTML<h/1>
 <p style="background-color:powderblue;">HTML stands for Hypertext Markup Language</p>
