--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -6,6 +6,7 @@
 <a href="https://www.w3schools.com">This is a link</a>
 <a href="http://www.wwf.org.uk">This is a link</a>
 <img src="w3schooooools.jpg" alt="w3schools.com" width="135" height="50">
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
 </body>
 </html>
