--- a/exercises/headings.html
+++ b/exercises/headings.html
@@ -17,5 +17,6 @@
 <h3>About</h3>
 
 <p>On the Island of Isla Nublar, a new park has been built: Jurassic Park is a theme park of cloned dinosaurs!!</p>
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 </body>
 </html>
