--- a/exercises/styles.html
+++ b/exercises/styles.html
@@ -5,6 +5,7 @@
 
 <h1 style="font-size:50px">HTML<h/1>
 <p style="background-color:powderblue;">HTML stands for Hypertext Markup Language</p>
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
 
 </body>
