--- a/exercises/quotations.html
+++ b/exercises/quotations.html
@@ -12,6 +12,7 @@ close to 5 million globally.
 </blockquote>
 <bdo dir="rtl">What a beautiful day!</bdo>
 <p>The <abbr title="World Health Organization">WHO</abbr> was founded in 1948.</p>
-<a href="https://conniecchen.github.io/exercises>Exercises Home</a>
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
+
 </body>
 </html>
