--- a/exercises/index.html
+++ b/exercises/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <title>HTML Tutorial</title>
-<body style="background-color:lavender;">
+<body style="background-color:lavender; text-align:center">
 
-<h1 style="color:white;">ECS FALL 2017</h1>
-<h2 style="color:white;">EXERCISES.</h2>
+<h1 style="color:white; background-color:DodgerBlue ">ECS FALL 2017</h1>
+<h2 style="color:white; background-color:DodgerBlue">EXERCISES.</h2>
   <a href="attributes.html">Attributes</a>
-<img src="/images/img.jpg" alt="Coffee" width="50" height="60">
+  <a href="headings.html">Headings</a>
+  <a href="paragraphs.html">Paragraphs</a>
+  <a href="styles.html">Styles</a>
+  <a href="formatting.html">Formatting</a>
+  <a href="quotations.html">Quotations</a>
+  <a href="comments.html">Comments</a>
+  <a href="colors.html">Colors</a>
+ 
   
 </body>
   
