--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -5,7 +5,8 @@
 <img src="w3schools.jpg" width="250" height="400">
 <a href="https://www.w3schools.com">This is a link</a>
 <a href="http://www.wwf.org.uk">This is a link</a>
-<img src="w3schooooools.jpg" alt="w3schools.com" width="135" height="50">
+<img src="http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg" width="160" height="50">
+  <img src="https://media.cntraveler.com/photos/594bfa45d9f2557072bf37fe/master/w_775,c_limit/champs-elysees-GettyImages-601762977.jpg" width="160" height="50">
 <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
 </body>
