--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -3,7 +3,9 @@
 <body>
 <p title="About W3Schools">W3Schools is a web developer's site.</p>
 <img src="w3schools.jpg" width="250" height="400">
-<a href="https://www.w3schools.com">This is a link</a>
+  
+  <p><a href="https://www.w3schools.com">This is a link</p>
+  
 <a href="http://www.wwf.org.uk">This is a link</a>
 <img src="http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg" width="160" height="50">
   <img src="https://media.cntraveler.com/photos/594bfa45d9f2557072bf37fe/master/w_775,c_limit/champs-elysees-GettyImages-601762977.jpg" width="160" height="50">
