--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -10,7 +10,17 @@
 <p><img src="http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg" width="650" height="300">
 <img src="https://media.cntraveler.com/photos/594bfa45d9f2557072bf37fe/master/w_775,c_limit/champs-elysees-GettyImages-601762977.jpg" width="600" height="300"></p>
 <p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') width=300px height=300 px">
-  
+You can specify background images<br>
+for any visible HTML element.<br>
+In this example, the background image<br>
+is specified for this paragraph.<br>
+By default, the background-image<br>
+will repeat itself in the direction(s)<br>
+where it is smaller than the element<br>
+where it is specified. (Try resizing the<br>
+browser window to see how the<br>
+background image behave.
+</p>  
   <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
 </body>
