--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -9,7 +9,7 @@
 <a href="http://www.wwf.org.uk">This is a link</a>
 <p><img src="http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg" width="650" height="300">
 <img src="https://media.cntraveler.com/photos/594bfa45d9f2557072bf37fe/master/w_775,c_limit/champs-elysees-GettyImages-601762977.jpg" width="600" height="300"></p>
-<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica neue">
+<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica neue;">
 <br>
 <br>
 <br>
