--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -7,9 +7,7 @@
   <p><a href="https://www.w3schools.com">This is a link</p>
   
 <a href="http://www.wwf.org.uk">This is a link</a>
-<p><img src="http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg" width="650" height="300">
-<img src="https://media.cntraveler.com/photos/594bfa45d9f2557072bf37fe/master/w_775,c_limit/champs-elysees-GettyImages-601762977.jpg" width="600" height="300"></p>
-<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica neue;">
+<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica;background-size: 100% 100%; background-repeat: no-repeat;background-attachment: fixed;background-position: center; font-size:30px"
 <br>
 <br>
 <br>
