--- a/exercises/attributes.html
+++ b/exercises/attributes.html
@@ -7,7 +7,7 @@
   <p><a href="https://www.w3schools.com">This is a link</p>
   
 <a href="http://www.wwf.org.uk">This is a link</a>
-<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica;background-size: 100% 100%; background-repeat: no-repeat;background-attachment: fixed;background-position: center; font-size:30px"
+<p style="background-image:url('http://smallandeleganthotels.com/images/blog/wallpaper-of-water-street-in-venice-italy.jpg') ; text-align:center; color:white; background-size:cover; font-family:helvetica;background-size: 100% 100%; background-repeat: no-repeat;background-attachment: fixed;background-position: center; text-size:100px"
 <br>
 <br>
 <br>
@@ -16,7 +16,7 @@
 <br>
 <br>
 <br>
-<b>Rome</b>
+<b style="font-size:90px;">Rome</b>
 <br>
 <br>
 <br>
@@ -27,7 +27,3 @@
 <br>
 <br>
 </p>
-  <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
-
-</body>
-</html>
