--- a/exercises/links.html
+++ b/exercises/links.html
@@ -2,13 +2,13 @@
 <html>
 <title>HTML Tutorial</title>
 <body>
-
-<h1>LINKS</h1>
-<p>lol</p>
-  
-<a href="index.html">
-  <img src="https://static.pexels.com/photos/356378/pexels-photo-356378.jpeg" alt="Exercises Home"
-       style="width:12px:height:12px:border:0;" width="12px" height="12px">
+<a href="https://www.w3schools.com">Visit our HTML tutorial.</a>
+<a href="html_images.asp">HTML Images</a>
+<a href="html_images.asp" target="_blank">HTML Images</a>
+<a href="html_images.asp" target="_blank" style="text-decoration:none">HTML Images</a>
+<a href="https://www.w3schools.com">
+<img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
+</a>
       
 </a>
 </body>
