--- a/exercises/index.html
+++ b/exercises/index.html
@@ -5,16 +5,23 @@
 
 <h1 style="color:white; background-color:DodgerBlue ">ECS FALL 2017</h1>
 <h2 style="color:white; background-color:DodgerBlue">EXERCISES.</h2>
-<ul>
-  <li><a href="attributes.html">Attributes</a></li>
-  <li><a href="headings.html">Headings</a></li>
-  <li><a href="paragraphs.html">Paragraphs</a></li>
-  <li><a href="styles.html">Styles</a></li>
-  <li><a href="formatting.html">Formatting</a></li>
-  <li><a href="quotations.html">Quotations</a>
-  <li><a href="comments.html">Comments</a></li>
-  <li><a href="colors.html">Colors</a></li>
-</ul> 
+<div class="menu">
+  <ul>
+    <li><a href="attributes.html">Attributes</a></li>
+    <li><a href="headings.html">Headings</a></li>
+    <li><a href="paragraphs.html">Paragraphs</a></li>
+    <li><a href="styles.html">Styles</a></li>
+    <li><a href="formatting.html">Formatting</a></li>
+    <li><a href="quotations.html">Quotations</a>
+    <li><a href="comments.html">Comments</a></li>
+    <li><a href="colors.html">Colors</a></li>
+  </ul> 
+  </div>
+  
+<style>
+    ul { display:table; margin:0 auto;}
+</style>
+
   
 </body>
   
