--- a/exercises/index.html
+++ b/exercises/index.html
@@ -15,6 +15,10 @@
     <li><a href="quotations.html">Quotations</a>
     <li><a href="comments.html">Comments</a></li>
     <li><a href="colors.html">Colors</a></li>
+    <li><a href="links.html">Links</a></li>
+    <li><a href="images.html">Images</a><li>
+    <li><a href="tables.html">Tables</a><li>
+    <li><a href="lists.html">Lists</a><li>
   </ul> 
   </div>
   
