--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -17,6 +17,24 @@ th, td {
 <table style="width:100%">
   <tr>
     <th>First Name</th>
+    <th>Last Name</th>
+    <th>Points</th>
+  </tr>
+  <tr>
+    <td>Jill</td>
+    <td>Smith</td>
+    <td>50</td>
+  </tr>
+  <tr>
+    <td>Eve</td>
+    <td>Jackson</td>
+    <td>94</td>
+  </tr>
+</table>
+
+</body>
+<head>
+<style>
 table, th, td {
     border: 1px solid black;
     border-collapse: collapse;
@@ -48,7 +66,8 @@ th, td {
 </table>
 
 </body>
-
+<head>
+<style>
 table, th, td {
     border: 5px solid red;
 }
@@ -77,6 +96,6 @@ th, td {
     <td>94</td>
   </tr>
 </table>
+
 </body>
-<a href="https://conniecchen.github.io/exercises">Exercises</a>
 </html>
