--- a/exercises/links.html
+++ b/exercises/links.html
@@ -9,6 +9,8 @@
 <a href="https://www.w3schools.com">
 <img src="smiley.gif" alt="HTML tutorial" style="width:42px;height:42px;border:0">
 </a>
+<br>
+<a href="https://conniecchen.github.io/exercises">Exercises Home</a>
       
 </a>
 </body>
