--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -3,18 +3,23 @@
 <head>
 <style>
 table, th, td {
-    border: 1px solid black;
+    border: 5px solid red;
     border-collapse: collapse;
 }
 th, td {
     padding: 5px;
     text-align: left;
 }
+tr {
+    background-color: black;
+    color: white;
+}
 </style>
 </head>
 <body>
 
-<table style="width:100%">
+<table style="width:300px">
+  <caption>Names</caption>
   <tr>
     <th>First Name</th>
     <th>Last Name</th>
