--- a/exercises/lists.html
+++ b/exercises/lists.html
@@ -44,6 +44,6 @@ ul#menu li {
 
 <ul id="menu">
   <li>Apples</li>
-
+  <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 </body>
 </html>
