--- a/exercises/images.html
+++ b/exercises/images.html
@@ -2,22 +2,22 @@
 <html>
 <body>
 
-<img src="programming.gif" alt="Computer Man"
+<img src="http://cdn.skim.gs/image/upload/c_fill,dpr_1.0,f_auto,fl_lossy,q_auto,w_940/v1456335851/msi/Yorkshire_Terrier_xkjh7m.jpg" alt="Dog"
 width="96" height="96">
-<img src="html5.gif" alt="HTML5 Icon"
+<img src="https://www.google.com/search?q=html&source=lnms&tbm=isch&sa=X&ved=0ahUKEwjRj4nw65vXAhWb0YMKHYPzBVcQ_AUICigB&biw=1366&bih=662#imgrc=DAACVl3oabw7AM:" alt="HTML5 Icon"
 style="width:256px;height:256px">
 <a href="https://www.w3schools.com">
-<img src="smiley.gif" alt="HTML tutorial"
+<img src="https://i.pinimg.com/736x/11/8a/c3/118ac35750a187594912120b941f83a4--vice-versa-smiley-faces.jpg" alt="HTML tutorial"
 style="width:42px;height:42px">
 </a>
 <p>
-<img src="smiley.gif" alt="Smiley face"
+<img src="https://i.pinimg.com/736x/11/8a/c3/118ac35750a187594912120b941f83a4--vice-versa-smiley-faces.jpg" alt="Smiley face"
 style="float:left;width:42px;height:42px">
 A paragraph with an image. A paragraph with an image.
 A paragraph with an image. A paragraph with an image.
 A paragraph with an image. A paragraph with an image.    
 </p>
-<img src="pic_mountain.jpg" style="width:304px;height:228px;">
+<img src="https://cdn.pixabay.com/photo/2017/03/14/17/43/mountain-2143877_960_720.jpg" style="width:304px;height:228px;">
 <img src="w3schooooools.jpg" alt="W3Schools.com" width="135" height="50">
 <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
