--- a/halloween.html
+++ b/halloween.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body>
+<body style="background-color:black">
 <p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 100%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
