--- a/halloween.html
+++ b/halloween.html
@@ -2,14 +2,13 @@
 <html>
 <head>
 <body style="background-color:black">
-<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 100%; background-repeat: no-repeat; background-attachment: fixed;">
-<br>
+<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
 <br>
 <b style="font-size:70px;">Halloween</b>
 <br>
-<br>
+<b>The Dark Side</b>
 <br>
 <br>
 </p>
