--- a/halloween.html
+++ b/halloween.html
@@ -5,10 +5,10 @@
 <p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
-<br>
 <b style="font-size:70px;">Halloween</b>
 <br>
-<b>The Dark Side</b>
+<b style="font-size:20px;">Mths and Legends</b>
+<br>
 <br>
 <br>
 </p>
