--- a/halloween.html
+++ b/halloween.html
@@ -7,7 +7,7 @@
 <br>
 <b style="font-size:70px;">Halloween</b>
 <br>
-<b style="font-size:20px;">Mths and Legends</b>
+<b style="font-size:20px;">Myths and Legends</b>
 <br>
 <br>
 <br>
