--- a/halloween.html
+++ b/halloween.html
@@ -5,6 +5,7 @@
 <p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
+<script src='http://use.edgefonts.net/creepster.js'></script>
 <b style="font-size:70px;">Halloween</b>
 <br>
 <b style="font-size:20px;">Myths and Legends</b>
@@ -12,6 +13,7 @@
 <br>
 <br>
 </p>
+<
 
 </body>
 </html>
