--- a/halloween.html
+++ b/halloween.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<body style="background-color:black">
-<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
-<br>
-<br>
 <script src='http://use.edgefonts.net/creepster.js'></script>
+</head>
+<body style="background-color:black">
+<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:creepster; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
+<br>
+<br>
 <b style="font-size:70px;">Halloween</b>
 <br>
 <b style="font-size:20px;">Myths and Legends</b>
