--- a/halloween.html
+++ b/halloween.html
@@ -4,7 +4,7 @@
 <script src='http://use.edgefonts.net/butcherman.js'></script>
 </head>
 <body style="background-color:black">
-<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:butchermancreepster; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
+<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:butcherman; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
 <b style="font-size:70px;">Halloween</b>
