--- a/halloween.html
+++ b/halloween.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script src='http://use.edgefonts.net/butcherman.js'></script>
-</head>
 <body style="background-color:black">
-<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:butcherman; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
+<p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
 <br>
 <b style="font-size:70px;">Halloween</b>
 <br>
-<b style="font-size:20px;">Myths and Legends</b>
+<b style="font-size:20px;">Urban Legends</b>
 <br>
 <br>
 <br>
 </p>
-<
+  <h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white;>Corrupted Candy</h1>
 
 </body>
 </html>
