--- a/halloween.html
+++ b/halloween.html
@@ -12,7 +12,7 @@
 <br>
 <br>
 </p>
-  <h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white;>Corrupted Candy</h1>
+<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white;">Corrupted Candy</h1>
 
 </body>
 </html>
