--- a/halloween.html
+++ b/halloween.html
@@ -16,7 +16,7 @@
   <p style="color:white;">Poisened candy and harmful treats have in fact been real life incidents. 
   The common saying “don’t take candy from strangers” dates back to the abduction of Charley Ross in 1874, who 
   was lured into a horse-drawn carriage with a treat and never seen again. In 1974, an eight year old, Timothy O Brien died due to
-  Halloween candy laced with cyanide. And so the annual rumors continue from poisened candy to chocolate covered razor blades.
+  Halloween candy laced with cyanide. And so the annual rumors continue from poisened candy to chocolate covered razor blades.</p>
 
 </body>
 </html>
