--- a/halloween.html
+++ b/halloween.html
@@ -13,10 +13,13 @@
 <br>
 </p>
 <h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>
-  <p style="color:white;">Poisened candy and harmful treats have in fact been real life incidents. 
-  The common saying “don’t take candy from strangers” dates back to the abduction of Charley Ross in 1874, who 
-  was lured into a horse-drawn carriage with a treat and never seen again. In 1974, an eight year old, Timothy O Brien died due to
-  Halloween candy laced with cyanide. And so the annual rumors continue from poisened candy to chocolate covered razor blades.</p>
+  <p style="color:white; font-family: helvetica">Poisened candy and harmful treats have in fact been real life incidents. 
+  The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
+  was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
+  outside of their mansion in the affluent <br>neighborhood of Germantown, Philadelphia. Two unknown men, who had given the siblings
+  candy a few times before, approached and<br> said that instead of candy, they had firecrackers to give them. Come, said the strangers, let’s get into our buggy.
+  And into the buggy <br>the boys went. In 1974, an eight year old, Timothy O Brien died due to
+  Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to <br>chocolate covered razor blades.</p>
 
 </body>
 </html>
