--- a/halloween.html
+++ b/halloween.html
@@ -17,9 +17,9 @@
   The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
   was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
   outside of their mansion in the affluent <br>neighborhood of Germantown, Philadelphia. Two unknown men, who had given the siblings
-  candy a few times before, approached and<br> said that instead of candy, they had firecrackers to give them. Come, said the strangers, let’s get into our buggy.
-  And into the buggy <br>the boys went. In 1974, an eight year old, Timothy O Brien died due to
-  Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to <br>chocolate covered razor blades.</p>
+  candy <br>a few times before, approached and said that instead of candy, they had firecrackers to give them.<br> Come, said the strangers, let’s get into our buggy.
+  And into the buggy the boys went.<br> In 1974, an eight year old, Timothy O Brien died due to
+  Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to chocolate covered<br> razor blades.</p>
 
 </body>
 </html>
