--- a/halloween.html
+++ b/halloween.html
@@ -13,7 +13,7 @@
 <br>
 </p>
 <h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>
-  <p style="color:white; font-family: helvetica"> <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" style="float: right;" />Poisened candy and harmful treats have in fact been real life incidents. 
+  <p style="color:white; font-family: helvetica"> <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" style="float: right; width:300px height:300px" />Poisened candy and harmful treats have in fact been real life incidents. 
   The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
   was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
   outside of their mansion in the affluent <br>neighborhood of Germantown, Philadelphia. Two unknown men, who had given the siblings
