--- a/halloween.html
+++ b/halloween.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<style>
+img {
+    float: right;
+    margin: 0px 50px 15px 20px;
+}
+</style>
+</head>
 <body style="background-color:black">
 <p style="background-image:url('http://ak4.picdn.net/shutterstock/videos/7303744/thumb/1.jpg') ; text-align:center; color:white;font-family:helvetica; background-size: 100% 70%; background-repeat: no-repeat; background-attachment: fixed;">
 <br>
@@ -14,7 +21,7 @@
 </p>
 <h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>treating-apartment_vna
   <p style="color:white; font-family: helvetica"> 
-  <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" style="float: right;" width="400" height="300" 'margin-right:60px' />  
+  <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="400" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
   The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
   was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
