--- a/halloween.html
+++ b/halloween.html
@@ -19,7 +19,7 @@ img {
 <br>
 <br>
 </p>
-<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px; line-height:1.4em">Corrupted Candy</h1>treating-apartment_vna
+<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px; line-height:.5em;">Corrupted Candy</h1>treating-apartment_vna
   <p style="color:white; font-family: helvetica"> 
   <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
