--- a/halloween.html
+++ b/halloween.html
@@ -19,7 +19,7 @@ img {
 <br>
 <br>
 </p>
-<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>treating-apartment_vna
+<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>
   <p style="color:white; font-family: helvetica; line-height:20px;"> 
   <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
@@ -29,5 +29,13 @@ img {
   candy <br>a few times before, approached and said that instead of candy, they had firecrackers to give them.<br> Come, said the strangers, let’s get into our buggy.
   And into the buggy the boys went.<br> In 1974, an eight year old, Timothy O Brien died due to
   Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to chocolate covered<br> razor blades.</p>
+<h2 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Halloween Massacre</h2>
+    <p style="color:white; font-family: helvetica; line-height:20px;"> 
+    <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300"
+    A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues<br> to spread a legendary story about 
+    a Halloween massacre. The plot goes that the man in <br> the black mask in the photo above was at a costume party and decided to lock all the doors 
+    in order <br> to attempt murdering each and every guest. Seven partygoers met their end and the man <br>was never caught. It wasn’t until 
+    1969 that his mask was found by the FBI. <br>However, the details are vague, but the rumour usually provides just enough specificity to
+    make the warning <br> apply to a large section of the population. </p>
 </body>
 </html>
