--- a/halloween.html
+++ b/halloween.html
@@ -33,9 +33,10 @@ img {
 <br>   
 <br>
 <br>
-<h2 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Halloween Massacre</h2>
+<br>
+<h2 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 230px;">Halloween Massacre</h2>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
-    <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300"
+    <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300">
     A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues<br> to spread a legendary story about 
     a Halloween massacre. The plot goes that the man in <br> the black mask in the photo above was at a costume party and decided to lock all the doors 
     in order <br> to attempt murdering each and every guest. Seven partygoers met their end and the man <br>was never caught. It wasn’t until 
