--- a/halloween.html
+++ b/halloween.html
@@ -19,7 +19,7 @@ img {
 <br>
 <br>
 </p>
-<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</h1>
+<p><b style="text-align:left; font-size:40px; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</b></p>
   <p style="color:white; font-family: helvetica; line-height:20px;"> 
   <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
@@ -34,7 +34,7 @@ img {
 <br>
 <br>
 <br>
-<h1 style="text-align:left; background-color:rgb(217, 99, 30);color:white; width: 260px;">Halloween Massacre</h1>
+<p><b style="text-align:left; font-size:40px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Halloween Massacre</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300">
     A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues<br> to spread a legendary story about 
