--- a/halloween.html
+++ b/halloween.html
@@ -19,7 +19,7 @@ img {
 <br>
 <br>
 </p>
-<p><b style="text-align:left; font-size:40px; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</b></p>
+<p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</b></p>
   <p style="color:white; font-family: helvetica; line-height:20px;"> 
   <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
@@ -34,13 +34,16 @@ img {
 <br>
 <br>
 <br>
-<p><b style="text-align:left; font-size:40px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Halloween Massacre</b></p>
+<br>
+<br>
+<p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Halloween Massacre</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://orion-uploads.openroadmedia.com/lg_7c238890eca1-halloweencreepyurbanlegends_massacre.jpg" width="500" height="300">
     A recurring Halloween myth is the threat of a massacre. One particular photo from 1962 continues<br> to spread a legendary story about 
     a Halloween massacre. The plot goes that the man in <br> the black mask in the photo above was at a costume party and decided to lock all the doors 
     in order <br> to attempt murdering each and every guest. Seven partygoers met their end and the man <br>was never caught. It wasn’t until 
     1969 that his mask was found by the FBI. <br>However, the details are vague, but the rumour usually provides just enough specificity to
-    make the warning <br> apply to a large section of the population. </p>
+    make the warning <br> apply to a large section of the population. Stories of supposed historic massacres have been turned into memes,<br> making them 
+    easier to spread and appear more authoritative, despite the fact<br> there isn’t a shred of evidence to back them up.</p>
 </body>
 </html>
