--- a/halloween.html
+++ b/halloween.html
@@ -43,7 +43,7 @@ img {
     a Halloween massacre. The plot goes that the man in <br> the black mask in the photo above was at a costume party and decided to lock all the doors 
     in order <br> to attempt murdering each and every guest. Seven partygoers met their end and the man <br>was never caught. It wasn’t until 
     1969 that his mask was found by the FBI. <br>However, the details are vague, but the rumour usually provides just enough specificity to
-    make the warning <br> apply to a large section of the population. Stories of supposed historic massacres have been turned into memes,<br> making them 
-    easier to spread and appear more authoritative, despite the fact<br> there isn’t a shred of evidence to back them up.</p>
+    make the warning <br> apply to a large section of the population. Stories of supposed historic massacres have been turned into memes, making them 
+    easier to spread and appear more authoritative, despite the fact there isn’t a shred <br> of evidence to back them up.</p>
 </body>
 </html>
