--- a/halloween.html
+++ b/halloween.html
@@ -55,7 +55,7 @@ img {
 <p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Blue Star Tattoo Hoax</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://upload.wikimedia.org/wikipedia/en/8/87/Mickey_mouse_acid_warning.png" width="500" height="300">
-    <p>The blue star tattoo legend occasionally surfaces in American elementary and <br> middle schools in the form of a flyer that has been 
+    The blue star tattoo legend occasionally surfaces in American elementary and <br> middle schools in the form of a flyer that has been 
     photocopied through many generations, which is distributed to <br> parents by concerned school officials. It has also become popular on 
     Internet mailing lists and websites. This legend <br> states that a temporary lick-and-stick tattoo soaked in LSD and made in the form of
     a blue star or of popular children's <br> cartoon characters, such as Mickey Mouse 
