--- a/halloween.html
+++ b/halloween.html
@@ -55,15 +55,14 @@ img {
 <p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Blue Star Tattoo Hoax</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://upload.wikimedia.org/wikipedia/en/8/87/Mickey_mouse_acid_warning.png" width="500" height="300">
-    The blue star tattoo legend occasionally surfaces in American elementary and <br> middle schools in the form of a flyer that has been 
-    photocopied through many generations, which is distributed to <br> parents by concerned school officials. It has also become popular on 
-    Internet mailing lists and websites. This legend <br> states that a temporary lick-and-stick tattoo soaked in LSD and made in the form of
-    a blue star or of popular children's <br> cartoon characters, such as Mickey Mouse 
-    and Bart Simpson, is being distributed to children in the area in order to get them 'addicted to LSD', <br>even though LSD is rarely 
-    addictive. The legend possibly originated from the fact that <br>an LSD solution is sometimes sold on blotter paper with various designs,
-    including cartoons. The flyer lists an<br> inaccurate description of the effects of LSD, some attribution (typically to a well-regarded
-    hospital or a vaguely specified "advisor to <br>the president"), and instructs parents to contact police if they come across the blue 
-    star <br>tattoos. No actual cases of LSD distribution to children in this manner have been documented. Furthermore, LSD
-    does not penetrate through <br>skin in sufficient quantities so as to induce a psychedelic experience.</p>
+    The blue star tattoo legend occasionally surfaces in American elementary and middle schools in the form of a flyer that has been 
+    photocopied through many generations, which is distributed to parents by concerned school officials. It has also become popular on 
+    Internet mailing lists and websites. This legend states that a temporary lick-and-stick tattoo soaked in LSD and made in the form of
+    a blue star or of popular children's cartoon characters, such as Mickey Mouse 
+    and Bart Simpson, is being distributed to children in the area in order to get them addicted to LSD, even though LSD is rarely 
+    addictive. The legend possibly originated from the fact that an LSD solution is sometimes sold on blotter paper with various designs,
+    including cartoons. The flyer lists an inaccurate description of the effects of LSD and instructs parents to contact police if they come across the blue 
+    star tattoos. No actual cases of LSD distribution to children in this manner have been documented. Furthermore, LSD
+    does not penetrate through skin in sufficient quantities so as to induce a psychedelic experience.</p>
 </body>
 </html>
