--- a/halloween.html
+++ b/halloween.html
@@ -55,8 +55,8 @@ img {
 <p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 260px;">Blue Star Tattoo Hoax</b></p>
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://upload.wikimedia.org/wikipedia/en/8/87/Mickey_mouse_acid_warning.png" width="500" height="300">
-    The blue star tattoo legend occasionally surfaces in American elementary and middle schools in the form of a flyer that has been 
-    photocopied through many generations, which is distributed to parents by concerned school officials. It has also become popular on 
+    As Halloween time nears, the "Blue Star" urban legend will most likely resurface playing on parents fears. This legend caused so
+    much commotion in the past flyers were made given to parents as seen on the right. It has also become popular on 
     Internet mailing lists and websites. This legend states that a temporary lick-and-stick tattoo soaked in LSD and made in the form of
     a blue star or of popular children's cartoon characters, such as Mickey Mouse 
     and Bart Simpson, is being distributed to children in the area in order to get them addicted to LSD, even though LSD is rarely 
