--- a/halloween.html
+++ b/halloween.html
@@ -56,7 +56,7 @@ img {
     <p style="color:white; font-family: helvetica; line-height:20px;"> 
     <img src="https://upload.wikimedia.org/wikipedia/en/8/87/Mickey_mouse_acid_warning.png" width="500" height="400">
     As Halloween time nears, the "Blue Star" urban legend will most likely resurface playing on parents fears. This legend caused so
-    much commotion in the past flyers were made given to parents as seen on the right. It has also become popular on 
+    much commotion in the past, flyers were made given to parents as seen on the right. It has also become popular on 
     Internet mailing lists and websites. This legend states that a temporary lick-and-stick tattoo soaked in LSD and made in the form of
     a blue star or of popular children's cartoon characters, such as Mickey Mouse 
     and Bart Simpson, is being distributed to children in the area in order to get them addicted to LSD, even though LSD is rarely 
