--- a/index.html
+++ b/index.html
@@ -7,30 +7,7 @@
   <hr>
   <p style="font-family:courier;">Welcome!</p>
   <p style="color: red">I hope you enjoy my page. </p>
-  <p style="font-size:40px">Computer Science. </p>
-  <p>A HTML document is made up of a number of blocks called <strong>elements</strong> </p>
-  <p>An Element is defined by tags where there is a <em>start</em> and <em>end</em> tag.</p>
-  <p>HTML, CSS, and Javascript form the three most <mark>vital</mark> components of the World Wide Web
-  <p>HTML stands for <q>Hypertext Markup Language</q>.</p>
-  <bdo dir="rtl">Computers!</bdo>
-  <p>The <abbr title="Hypertext Markup Language">HTML</abbr> is used everywhere.</p>
-  <p>ECS Fall</p>
-<!-- Hello -->
-<p>2017</p>
-
-  <a href="https://sites.google.com/sduhsd.net/escfall2017chenc2997/"> My Portfolio </a> 
-</body>
-<pre>
-
-To those whom I've fought with
-
-and to those I don't know your name
-
-We fought by one another.
-
-You did not die in vain.
-
-</pre>
+  <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
 
   
 </html>
