--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <p style="font-family:courier;">Welcome!</p>
   <p style="color: red">I hope you enjoy my page. </p>
   <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
+  
+  <img src="/images/home.png">
 
   
 </html>
