--- a/halloween.html
+++ b/halloween.html
@@ -21,7 +21,7 @@ img {
 </p>
 <p><b style="text-align:left; font-size:36px; background-color:rgb(217, 99, 30);color:white; width: 250px;">Corrupted Candy</b></p>
   <p style="color:white; font-family: helvetica; line-height:20px;"> 
-  <img src="http://cdn.skim.gs/image/upload/v1456339674/msi/trick-or-treating-apartment_vnaqvx.jpg" width="500" height="300">  
+  <img src="/images/IMG_0181.JPG" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
   The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
   was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
