--- a/exercises/tables.html
+++ b/exercises/tables.html
@@ -21,19 +21,24 @@ tr {
 <table style="width:300px">
   <caption>Names</caption>
   <tr>
-    <th>First Name</th>
-    <th>Last Name</th>
-    <th>Points</th>
+    <th>Course Name</th>
+    <th>Teacher</th>
+    <th>Period</th>
   </tr>
   <tr>
-    <td>Jill</td>
-    <td>Smith</td>
-    <td>50</td>
+    <td>Math</td>
+    <td>Johnson</td>
+    <td>1</td>
   </tr>
   <tr>
-    <td>Eve</td>
-    <td>Jackson</td>
-    <td>94</td>
+    <td>English</td>
+    <td>Poppy</td>
+    <td>2</td>
+  </tr>
+  <tr>
+      <td>Chemistry</td>
+      <td>Burke</td>
+      <td><3</td>
   </tr>
 </table>
     <a href="https://conniecchen.github.io/exercises">Exercises Home</a>
