--- a/halloween.html
+++ b/halloween.html
@@ -29,6 +29,7 @@ img {
   candy <br>a few times before, approached and said that instead of candy, they had firecrackers to give them.<br> Come, said the strangers, let’s get into our buggy.
   And into the buggy the boys went.<br> In 1974, an eight year old, Timothy O Brien died due to
   Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to chocolate covered<br> razor blades.</p>
+<a href="https://www.theguardian.com/lifeandstyle/2017/oct/31/halloween-myths-and-urban-legends-that-just-wont-die">(Source)</a>
 <br>
 <br>   
 <br>
@@ -45,6 +46,7 @@ img {
     1969 that his mask was found by the FBI. <br>However, the details are vague, but the rumour usually provides just enough specificity to
     make the warning <br> apply to a large section of the population. Stories of supposed historic massacres have been turned into memes, making them 
     easier to spread and appear more authoritative, despite the fact there isn’t a shred <br> of evidence to back them up.</p>
+    <a href="https://the-line-up.com/halloween-urban-legends">(Source)</a>
 <br>
 <br>   
 <br>
@@ -64,5 +66,6 @@ img {
     including cartoons. The flyer lists an inaccurate description of the effects of LSD and instructs parents to contact police if they come across the blue 
     star tattoos. No actual cases of LSD distribution to children in this manner have been documented. Furthermore, LSD
     does not penetrate through skin in sufficient quantities so as to induce a psychedelic experience.</p>
+    <a href="https://the-line-up.com/halloween-urban-legends">(Source)</a>
 </body>
 </html>
