--- a/halloween.html
+++ b/halloween.html
@@ -26,12 +26,12 @@ a {
   <p style="color:white; font-family: helvetica; line-height:20px;"> 
   <img src="/images/IMG_0181.JPG" width="500" height="300">  
   Poisoned candy and harmful treats have in fact been real life incidents. 
-  The common saying <br>“don’t take candy from strangers” dates back to the abduction of Charley Ross <br>in 1874, who 
-  was lured into a horse-drawn carriage with a treat and never seen again.<br> On that day, Charley and his brother Walter were playing
-  outside of their mansion in the affluent <br>neighborhood of Germantown, Philadelphia. Two unknown men, who had given the siblings
-  candy <br>a few times before, approached and said that instead of candy, they had firecrackers to give them.<br> Come, said the strangers, let’s get into our buggy.
-  And into the buggy the boys went.<br> In 1974, an eight year old, Timothy O Brien died due to
-  Halloween candy laced with cyanide.<br> Now for good reason, the annual rumors continue from poisened candy to chocolate covered<br> razor blades.</p>
+  The common saying “don’t take candy from strangers” dates back to the abduction of Charley Ross in 1874, who 
+  was lured into a horse-drawn carriage with a treat and never seen again. On that day, Charley and his brother Walter were playing
+  outside of their mansion in the affluent neighborhood of Germantown, Philadelphia. Two unknown men, who had given the siblings
+  candy a few times before, approached and said that instead of candy, they had firecrackers to give them.Come, said the strangers, let’s get into our buggy.
+  And into the buggy the boys went. In 1974, an eight year old, Timothy O Brien died due to
+  Halloween candy laced with cyanide. Now for good reason, the annual rumors continue from poisened candy to chocolate covered razor blades.</p>
 <p><a href="https://www.theguardian.com/lifeandstyle/2017/oct/31/halloween-myths-and-urban-legends-that-just-wont-die">(Source)</a></p>
 <br>
 <br>   
