--- a/halloween.html
+++ b/halloween.html
@@ -9,6 +9,10 @@ img {
 a {
     color: rgb(186, 157, 214);
 }
+p.ex {
+    height: 100px;
+    width: 100px;
+}
 </style>
 </head>
 <body style="background-color:black">
