--- a/css-exercises/selectors.html
+++ b/css-exercises/selectors.html
@@ -23,6 +23,6 @@
   
   <h1>Heading</h1>
   <p>Paragraph</p>
-    <a href="/index.html"></a>
+    <a href="https://conniecchen.github.io/css-exercises">Css Exercises Home</a>
   </body>
 </html>
