--- a/html-reference.html
+++ b/html-reference.html
@@ -2,4 +2,74 @@
 <html>
 <body>
 <h1 style= "text-align: center; color:DodgerBlue;">HTML Reference Page</h1>
-<p style= "font-size: 20px;"> Element: HTML <br> Tag: &lt;html&gt; <br> Common Use: 
+<p style= "font-size: 18px;"> Element: HTML <br> 
+Tag Used: &lt;html&gt;- in beginning of the document <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          
+&lt;/html&gt;- in end of the whole document <br>
+About: The root element of an html page <br> 
+Appearance: Should not appear in actual browser 
+<br>
+<br>
+
+Element: Header <br>
+Tag Used: &lt;head&gt;- placed right after html tag <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+  &lt;/head&gt;- placed after defining the head (usually title)<br>
+About: Contains meta information about the document <br>
+Appearance: Should not appear in actual browser
+<br>
+<br>
+
+Element: Title <br>
+Tag Used: &lt;title&gt;- placed after head tag <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+   &lt;/title&gt;- placed after defining title <br>
+About: specifies a title for the document <br>
+Appearance: Should not appear in actual browser
+<br>
+<br>
+
+Example format: <br>
+&lt;html&gt; <br>
+&lt;head&gt; <br>
+&lt;title&gt;Page Title&lt;/title&gt;<br>
+&lt;/head&gt;<br>
+&lt;/html&gt;<br>
+<br>
+
+Element: Body <br>
+Tag Used: &lt;body&gt;- when starting to actually write content<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+  &lt;/body&gt;- after done writing the content <br>
+About: contains the visible page content <br>
+Appearance: Should not appear in actual browser, but is needed in order for content to appear
+<br>
+<br>
+
+Element: Headings <br>
+Tag Used: &lt;h1&gt;,&lt;h2&gt;... and &lt;/h1&gt;&lt;/h2&gt;...<br>
+About: &lt;h1&gt; defines a large heading, &lt;h2&gt; would be a smaller heading, &lt;h2&gt; would be even smaller and so on. <br>
+Appearance: <br>
+<p style="font-size: 30px; line-height: 1px;">Heading 1 </p> <br>
+<p style="font-size: 20px; line-height: 1px;">Heading 2 </p>
+<br>
+<p style="font-size: 18px;"</p>
+Element: Paragraphs <br>
+Tag Used:&lt;p&gt; and &lt;/p&gt; <br>
+About: defines a paragraph <br>
+Appearance: "This is a paragraph" <br> <br>
+Element: Breaks <br>
+Tag Used: &lt;br&gt; <br>
+About: defines a line break, an empty element without a closing tag <br>
+Appearance:
+This is <br>
+a line break <br> <br>
+
+Element: Lines <br>
+Tag Used: &lt;hr&gt; <br>
+About: a line going across the page, used when dividing sections <br>
+Appearance: <hr>
+
+
+  </body>
+</html>
