--- a/html-reference.html
+++ b/html-reference.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1 style= "text-align: center; color:DodgerBlue;">HTML Reference Page</h1>
+<h1 style= "color:DodgerBlue;">HTML Reference Page</h1>
 <p style= "font-size: 18px;"> Element: HTML <br> 
 Tag Used: &lt;html&gt;- in beginning of the document <br>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;          
