--- a/html-reference.html
+++ b/html-reference.html
@@ -68,7 +68,15 @@ a line break <br> <br>
 Element: Lines <br>
 Tag Used: &lt;hr&gt; <br>
 About: a line going across the page, used when dividing sections <br>
-Appearance: <hr>
+Appearance: <hr> <br> <br>
+  
+Element: Comments <br>
+Tag Used: &lt;!-- --&gt; <br>
+About:Can place notifications and reminders in your HTML or can be used to debug html <br>
+Appearance: Should not appear in actual broswer <br> <br>
+
+Element: Links <br>
+Tag Used: &lt;a&gt; (popular one is &lt;a href&gt;) and &lt;/a&gt; <br>
 
 
   </body>
