--- a/html-reference.html
+++ b/html-reference.html
@@ -68,8 +68,8 @@ a line break <br> <br>
 Element: Lines <br>
 Tag Used: &lt;hr&gt; <br>
 About: a line going across the page, used when dividing sections <br>
-Appearance: <hr> <br> <br>
-  
+Appearance: <hr> 
+<p style="font-size: 18px;"</p>
 Element: Comments <br>
 Tag Used: &lt;!-- --&gt; <br>
 About:Can place notifications and reminders in your HTML or can be used to debug html <br>
